supervisor-macros/tests/ui/compile_fail/resources_on_pool.stderr
error: `resources:` is not supported on `pool` — members would contend for a single instance; declare per-node
  --> tests/ui/compile_fail/resources_on_pool.rs:13:9
   |
13 |         resources: [LED: FakeLed],
   |         ^^^^^^^^^
